terminal.py:  Tweaked the backspace() function so that it no longer resets the terminal rendition. terminal.py:  Tweaked how the current rendition is stored and restored in the functions that save and restor the cursor position. tests/inlined_pydot.py:  This little test script now outputs a basic architecture of how Gate One works. CSS Themes:  Tweaked the black and dark-black themes so they override the default b0 (black background) of the text color scheme.  This makes the overall appearance of the terminal better when there's vertical lines visible (no gaps).

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -1018,3 +1018,6 @@ hr {
     opacity: .1;
     z-index: 510; /* Just above the pastearea */
 }
+/* Override the black text background since our background is already black */
+#{{container}} span.b0 { background-color: transparent; }
+#{{container}} span.f0.b0 { color: #444; background-color: transparent; } /* Black on Black */
